library/general/allowedrepos/samples/repo-must-be-openpolicyagent/disallowed_initcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-disallowed
spec:
  containers: []
