library/general/allowedrepos/samples/repo-must-be-openpolicyagent/example_disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-disallowed
  labels:
    owner: me.agilebank.demo
spec:
  containers:
    - name: nginx
      image: nginx
      resources:
        limits:
          cpu: "100m"
          memory: "30Mi"
